<resources>
    <string name="app_name">My Application</string>
    <string name="loginPwd">登录密码</string>
    <string name="loginEmail">登录邮箱</string>
    <string name="loginUserName">用户名</string>
    <string name="forget"><u>忘了密码？</u></string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Giannis Chen</string>
    <string name="nav_header_subtitle">这个用户很懒，什么也没写</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_find">食物查询</string>
    <string name="menu_record_food">记录饮食</string>
    <string name="menu_record_sleep">记录睡眠</string>
    <string name="menu_info">个人信息</string>
    <string name="menu_feedback">问题反馈</string>
    <string name="menu_recommend">食物推荐</string>
    <string name="add_user">添加用户</string>
    <string name="del_user">删除用户</string>
    <string name="mod_user">修改用户</string>
    <string name="search_user">查询用户</string>

    <string-array name="is_admin_spinner">
        <item>普通用户</item>
        <item>管理员</item>
    </string-array>
</resources>
