<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recommend"
        android:name="com.example.myapplication.ui.recommend.RecommendFragment"
        android:label="@string/menu_recommend"
        tools:layout="@layout/fragment_recommend"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.find.FindFragment"
        android:label="@string/menu_find"
        tools:layout="@layout/fragment_find" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.recordfood.RecordFoodFragment"
        android:label="@string/menu_record_food"
        tools:layout="@layout/fragment_record_food" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myapplication.ui.recordsleep.RecordSleepFragment"
        android:label="@string/menu_record_sleep"
        tools:layout="@layout/fragment_record_sleep" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>