<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:gravity="right">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/username"
            android:layout_marginTop="185dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password"
            android:layout_marginTop="30dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="健康管理系统"
            android:textSize="40sp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/loginUserName"
            android:textSize="20sp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/loginPwd"
            android:textSize="25sp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:autoLink="all"
            android:text="@string/forget"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/mBtnLogin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_button_login"
            android:text="登录"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mBtnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/signup"
            android:text="注册"
            android:background="#FFEC8B"
            android:textSize="25sp">

        </Button>
    </LinearLayout>

</LinearLayout>